# call_me_maybe

./: Makefile  README.md  mypy.ini  pyproject.toml
data/output/: output.json
src/: main.py  parser.py  read_input.py  validator.py
src/model/: __init__.py  function_calls.py  model.py
src/parser/: __init__.py  definitions.py  parser.py
